Changed distribution family for GAMs

--- a/Results/Results.ipynb
+++ b/Results/Results.ipynb
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'data.frame':\t158 obs. of  30 variables:\n",
+      "'data.frame':\t158 obs. of  31 variables:\n",
       " $ Species                  : chr  \"Aedes.aegypti\" \"Aedes.albopictus\" \"Aedes.infirmatus\" \"Aedes.sollicitans\" ...\n",
       " $ temp_lag0                : num  339 212 795 439 1199 ...\n",
       " $ temp_lag1                : num  327 200 782 470 1262 ...\n",
@@ -219,6 +219,7 @@
       " $ nr_total_obs             : int  130 130 130 130 130 130 130 130 130 130 ...\n",
       " $ nr_bestfit_obs           : int  126 127 127 126 127 126 127 126 126 126 ...\n",
       " $ nr_nonzero_obs           : int  106 103 117 97 125 59 110 124 126 126 ...\n",
+      " $ p                        : num  0 0 -4 -0.08 -69.41 ...\n",
       " $ z_inflation_pct          : int  16 19 8 23 2 53 13 2 0 0 ...\n",
       " $ Best_Temp                : chr  \"temp_lag2\" \"temp_lag1\" \"temp_lag1\" \"temp_lag0\" ...\n",
       " $ AIC_wt_temp              : num  82.8 99.8 99.8 98.8 100 100 98.4 97.5 100 100 ...\n",
@@ -1649,7 +1650,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A data.frame: 28 × 31</caption>\n",
+       "<caption>A data.frame: 28 × 32</caption>\n",
        "<thead>\n",
        "\t<tr><th></th><th scope=col>Species</th><th scope=col>temp_lag0</th><th scope=col>temp_lag1</th><th scope=col>temp_lag2</th><th scope=col>precip_lag0</th><th scope=col>precip_lag1</th><th scope=col>precip_lag2</th><th scope=col>nr_total_obs</th><th scope=col>nr_bestfit_obs</th><th scope=col>nr_nonzero_obs</th><th scope=col>⋯</th><th scope=col>Multi_SignifVariables</th><th scope=col>MultiAR_DevianceExplained</th><th scope=col>MultiAR_AIC</th><th scope=col>MultiAR_MAE</th><th scope=col>MultiAR_NMAE</th><th scope=col>MultiAR_MB</th><th scope=col>MultiAR_Folds</th><th scope=col>MultiAR_SignifVariables</th><th scope=col>Location</th><th scope=col>sigtemp</th></tr>\n",
        "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>⋯</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
@@ -1687,7 +1688,7 @@
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 28 × 31\n",
+       "A data.frame: 28 × 32\n",
        "\\begin{tabular}{r|lllllllllllllllllllll}\n",
        "  & Species & temp\\_lag0 & temp\\_lag1 & temp\\_lag2 & precip\\_lag0 & precip\\_lag1 & precip\\_lag2 & nr\\_total\\_obs & nr\\_bestfit\\_obs & nr\\_nonzero\\_obs & ⋯ & Multi\\_SignifVariables & MultiAR\\_DevianceExplained & MultiAR\\_AIC & MultiAR\\_MAE & MultiAR\\_NMAE & MultiAR\\_MB & MultiAR\\_Folds & MultiAR\\_SignifVariables & Location & sigtemp\\\\\n",
        "  & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <int> & <int> & ⋯ & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <chr> & <chr> & <lgl>\\\\\n",
@@ -1724,7 +1725,7 @@
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 28 × 31\n",
+       "A data.frame: 28 × 32\n",
        "\n",
        "| <!--/--> | Species &lt;chr&gt; | temp_lag0 &lt;dbl&gt; | temp_lag1 &lt;dbl&gt; | temp_lag2 &lt;dbl&gt; | precip_lag0 &lt;dbl&gt; | precip_lag1 &lt;dbl&gt; | precip_lag2 &lt;dbl&gt; | nr_total_obs &lt;int&gt; | nr_bestfit_obs &lt;int&gt; | nr_nonzero_obs &lt;int&gt; | ⋯ ⋯ | Multi_SignifVariables &lt;chr&gt; | MultiAR_DevianceExplained &lt;dbl&gt; | MultiAR_AIC &lt;dbl&gt; | MultiAR_MAE &lt;dbl&gt; | MultiAR_NMAE &lt;dbl&gt; | MultiAR_MB &lt;dbl&gt; | MultiAR_Folds &lt;int&gt; | MultiAR_SignifVariables &lt;chr&gt; | Location &lt;chr&gt; | sigtemp &lt;lgl&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
@@ -1926,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1964,6 +1965,24 @@
     "\n",
     "print(ranges)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Min. 1st Qu.  Median    Mean 3rd Qu.    Max.    NA's \n",
+       "-69.410  -0.200  -0.010  -2.082   0.000   0.940       1 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
